@@ -1,3 +1,8 @@
+2017-01-30  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 40469: Src/Zle/complete.c: change strategy from 40453 to use
+	patcompile(PAT_HEAPDUP) instead of signal queueing.
+
 2017-01-30  Peter Stephenson  <p.stephenson@samsung.com>
 
 	* 40465: Test/C04funcdef.ztst, Test/V06parameter.ztst: use
